# game-gen

./: .gitignore  docker-compose.yml  start_all.sh  start_backend.sh
backend/: Dockerfile  pyproject.toml  requirements.txt  run_end_to_end.sh  run_server.py  start_test_server.py  startup.sh  test-interface.html  test_interface_alt.py
backend/app/: db.py  main.py  schemas.py
backend/app/models/: __init__.py  campaign.py  character.py
backend/app/routes/: campaigns.py  chat.py
backend/app/services/: llm_service.py
backend/data/: dd_simulator.db
backend/dd_simulator_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/plans/: 2026-03-18-dd-simulator-phase1.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/campaigns/: page.tsx
frontend/app/campaigns/[id]/: page.tsx
frontend/app/campaigns/new/: page.tsx
frontend/lib/: api.ts
